// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tag should have a link 1`] = `
<scale-tag href="#">
  <mock:shadow-root>
    <a class="tag tag--link" href="#" part="base link" target="_self">
      <slot></slot>
    </a>
  </mock:shadow-root>
  Label
</scale-tag>
`;

exports[`Tag should match snapshot 1`] = `
<scale-tag>
  <mock:shadow-root>
    <span class="tag" part="base">
      <slot></slot>
    </span>
  </mock:shadow-root>
  Label
</scale-tag>
`;
